[add/user.js] user 新增白名單功能
